samples/_failures_safe/1761310679_91e6fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d262389.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2d262389.c:189:17: error: expected expression at end of input
  189 |                 long newDist = (long)
      |                 ^~~~
./samples/SAFE/__tmp_2d262389.c:189:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d262389.c:189:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d262389.c:189:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d262389.c:189:17: error: expected declaration or statement at end of input
